correction cache and contrast

--- a/Sass/Base/_Typography.scss
+++ b/Sass/Base/_Typography.scss
@@ -25,9 +25,9 @@ h2 {
 h3 {
 	font-size: 15px;
 	text-transform: uppercase;
-	color:$color-secondary;
+	color:$color-title;
 	font-weight: 600;
-	border-bottom: solid $color-secondary 3.5px;
+	border-bottom: solid $color-title 3.5px;
 	padding: 10px;
 }
 h4 {
