--- a/Sass/Layouts/_footer.scss
+++ b/Sass/Layouts/_footer.scss
@@ -5,7 +5,7 @@ footer{
 }
 
 .social{
-    color:$color-tertiaire;
+    color:black;
     margin:2rem;
     &:hover{
         color:$color-primary;
