--- a/Sass/Pages/_Accueil.scss
+++ b/Sass/Pages/_Accueil.scss
@@ -99,6 +99,10 @@
        margin: auto;
        line-height: 3em;
        letter-spacing: 0.2px;
+       text-align: left;
+       @media (max-width: 950px) {
+        padding: 1.5rem;
+     }
     }
     & h2 {
        color: $color-primary;
@@ -118,17 +122,21 @@
     &__container {
        max-width: 1000px;
        padding: 5rem;
-       margin: 5rem 50rem 5rem 50rem;
+       margin: auto;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, 1fr);
+       @media (max-width: 950px) {
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+     }
     }
     &__card {
        max-width: 300px;
        margin: 5rem;
     }
     &__hover {
-       max-width: 300px;
        background-color: rgba(226, 173, 153, 0.7);
        display: flex;
        font-size: 5em;
@@ -142,12 +150,14 @@
        z-index: 4;
        width: 300px;
        height: 500px;
+       @media (max-width: 950px) {
+        width: 275px ;
+      }
        &:hover {
           opacity: 1;
        }
+
     }
  }
  
  
- /*   
-     background: rgba(233, 87, 29, 0.5);*/
