--- a/Sass/Utils/_Variables.scss
+++ b/Sass/Utils/_Variables.scss
@@ -1,4 +1,5 @@
 $color-primary:#fff;
-$color-secondary: #b9643d;
+$color-secondary: #81361d;
 $color-tertiaire:#313131;
-$color-input:  rgb(141, 139, 139)
+$color-input:  #555;
+$color-title: #c46133;
